Added Examine Command
Corpses now use Timer to disappear after being created, TODO: find out how to garbage collect Corpse object.

--- a/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
+++ b/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
@@ -528,4 +528,7 @@
   <data name="interior" xml:space="preserve">
     <value>interior</value>
   </data>
+  <data name="examine" xml:space="preserve">
+    <value>examine</value>
+  </data>
 </root>
