--- a/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
+++ b/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
@@ -531,4 +531,7 @@
   <data name="examine" xml:space="preserve">
     <value>examine</value>
   </data>
+  <data name="addhit" xml:space="preserve">
+    <value>addhit</value>
+  </data>
 </root>
