Added AdminRemoveCorpse + IdTranslation
-Added command /removecorpse for admin ranks to recall DestroyCorpse from CorpseModel
-Added translation from weaponhash to human weapon name
-Added translation from boneId to zone of hit
-Removed bonestring from contructor parameters
TODO: remove addHit.

--- a/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
+++ b/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
@@ -534,4 +534,7 @@
   <data name="addhit" xml:space="preserve">
     <value>addhit</value>
   </data>
+  <data name="removecorpse" xml:space="preserve">
+    <value>removecorpse</value>
+  </data>
 </root>
