Added corpse carrying
Added corpse carrying + checks to make sure it spawns always on ground

TODO: when player logs out or dies, needs to drop corpse if holding one

--- a/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
+++ b/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
@@ -531,8 +531,8 @@
   <data name="examine" xml:space="preserve">
     <value>examine</value>
   </data>
-  <data name="addhit" xml:space="preserve">
-    <value>addhit</value>
+  <data name="carrycorpse" xml:space="preserve">
+    <value>carrycorpse</value>
   </data>
   <data name="removecorpse" xml:space="preserve">
     <value>removecorpse</value>
