Added exit conditions for corpse
Added conditions if player disconnects/dies while carrying corpse.

--- a/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
+++ b/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
@@ -528,8 +528,8 @@
   <data name="interior" xml:space="preserve">
     <value>interior</value>
   </data>
-  <data name="examine" xml:space="preserve">
-    <value>examine</value>
+  <data name="esamina" xml:space="preserve">
+    <value>esamina</value>
   </data>
   <data name="carrycorpse" xml:space="preserve">
     <value>carrycorpse</value>
