--- a/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
+++ b/dotnet/resources/WiredPlayers/messages/commands/ComRes.resx
@@ -528,22 +528,16 @@
   <data name="interior" xml:space="preserve">
     <value>interior</value>
   </data>
-  <data name="addpokersit" xml:space="preserve">
-    <value>addpokersit</value>
+  <data name="esamina" xml:space="preserve">
+    <value>esamina</value>
   </data>
-  <data name="createpokertable" xml:space="preserve">
-    <value>createpokertable</value>
+  <data name="trascinacadavere" xml:space="preserve">
+    <value>trascinacadavere</value>
   </data>
-  <data name="deletepokertable" xml:space="preserve">
-    <value>deletepokertable</value>
+  <data name="rimuovicadavere" xml:space="preserve">
+    <value>rimuovicadavere</value>
   </data>
-  <data name="listpokertables" xml:space="preserve">
-    <value>listpokertables</value>
-  </data>
-  <data name="poker" xml:space="preserve">
-    <value>poker</value>
-  </data>
-  <data name="removepokersit" xml:space="preserve">
-    <value>removepokersit</value>
+  <data name="incendiacadavere" xml:space="preserve">
+    <value>incendiacadavere</value>
   </data>
 </root>
